--- a/index.html
+++ b/index.html
@@ -3,12 +3,81 @@
 
 <head>
     <meta charset="UTF-8">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Dev</title>
+
     <link rel="stylesheet" href="style/index.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+    <div class="container">
+        <header>
+
+            <section class="card">
+                <img src="assets/img/Background_Intro.png" alt="">
+            </section>
+
+            <section class="info">
+                <img src="assets/icons/Avatar.svg" alt="">
+                <h2>Hello World! Meu nome é <span>Martina Santos</span> e sou</h2>
+                <h1>Desenvolvedora Fullstack</h1>
+                <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da
+                    minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios
+                    complexos.</p>
+
+            </section>
+
+            <section class="tags">
+
+                <div class="tag">
+                    <img src="assets/icons/GitHub.svg" alt="GitHub">
+                    <p>GitHub</p>
+                </div>
+
+                <div class="tag">
+                    <img src="assets/icons/HTML.png" alt="HTML">
+                    <p>HTML</p>
+                </div>
+
+                <div class="tag">
+                    <img src="assets/icons/CSS.svg" alt="CSS">
+                    <p>CSS</p>
+                </div>
+
+                <div class="tag">
+                    <img src="assets/icons/JavaScript.svg" alt="Javascript">
+                    <p>Javascript</p>
+                </div>
+
+                <div class="tag">
+                    <img src="assets/icons/React.svg" alt="React">
+                    <p>React</p>
+                </div>
+
+                <div class="tag">
+                    <img src="assets/icons/Node.js.svg" alt="Node.js">
+                    <p>Node.js</p>
+                </div>
+
+            </section>
+        </header>
+    </div>
 
 </body>
 
