--- a/index.html
+++ b/index.html
@@ -74,9 +74,73 @@
                     <img src="assets/icons/Node.js.svg" alt="Node.js">
                     <p>Node.js</p>
                 </div>
-
             </section>
         </header>
+
+        <main>
+            <section class="projects">
+                <h2>Meu trabalho</h2>
+                <span>Veja os projetos em destaque</span>
+
+                <section class="project-card ">
+
+                    <div class="card">
+                        <img src="assets/img/Thumbnail_Project-01.png" alt="Travelgram">
+                        <div>
+                            <h3>Travelgram</h3>
+                            <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+                        </div>
+
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/img/Thumbnail_Project-02.png" alt="Tech News">
+                        <div>
+                            <h3>Tech News</h3>
+                            <p>Homepage de um portal de notícias sobre a área de tecnologia</p>
+                        </div>
+
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/img/Thumbnail_Project-03.png" alt="Página de receita">
+                        <div>
+                            <h3>Página de receita</h3>
+                            <p>Página com o passo a passo de uma receita para cupcakes</p>
+                        </div>
+
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/img/Thumbnail_Project-04.png" alt="Zingen">
+                        <div>
+                            <h3>Zingen</h3>
+                            <p>Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+                        </div>
+
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/img/Thumbnail_Project-05.png" alt="">
+                        <div>
+                            <h3>Refund</h3>
+                            <p>Um sistema para pedido e acompanhamento de reembolso</p>
+                        </div>
+
+                    </div>
+
+                    <div class="card">
+                        <img src="assets/img/Thumbnail_Project-06.png" alt="">
+                        <div>
+                            <h3>Página de turismo</h3>
+                            <p>Página com as principais informações para quem quer viajar para Busan</p>
+                        </div>
+
+                    </div>
+
+                </section>
+            </section>
+        </main>
     </div>
 
 </body>
