Creating aside structure, and styling

--- a/index.html
+++ b/index.html
@@ -141,6 +141,31 @@
                 </section>
             </section>
         </main>
+
+        <aside>
+            <h2>Meus serviços</h2>
+            <span>Como posso ajudar o seu negócio</span>
+
+            <section class="grid">
+                <div class="devOps">
+                    <img src="assets/icons/Devices.png" alt="">
+                    <h3>Websites e Aplicativos</h3>
+                    <p>Desenvolvimento de interfaces</p>
+                </div>
+
+                <div class="devOps">
+                    <img src="assets/icons/HardDrives.png" alt="">
+                    <h3>API e banco de dados</h3>
+                    <p>Criação de serviços do sistema </p>
+                </div>
+
+                <div class="devOps">
+                    <img src="assets/icons/Infinity.png" alt="">
+                    <h3>DevOps</h3>
+                    <p>Gestão e infraestrutura da aplicação</p>
+                </div>
+            </section>
+        </aside>
     </div>
 
 </body>
