--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <header>
 
             <section class="card">
-                <img src="assets/img/Background_Intro.png" alt="">
+                <img  src="assets/img/Background_Intro.png" alt="">
             </section>
 
             <section class="info">
@@ -166,6 +166,47 @@
                 </div>
             </section>
         </aside>
+
+        <footer>
+            <div class="img-footer">
+                <img src="assets/img/Background_Contacts.png" alt="">
+            </div>
+            <div class="contact">
+                <h2>Contato</h2>
+                <h1>Gostou do meu trabalho? </h1>
+                <p>Entre em contato ou acompanhe as minhas redes sociais!</p>
+            </div>
+
+            <section class="grup">
+                <div class="link">
+                    <img src="assets/icons/LinkedinLogo.svg" alt="">
+                    <p>Linkedin</p>
+                    <img src="assets/icons/ArrowUpRight.svg" alt="">
+
+                </div>
+
+                <div class="link">
+                    <img src="assets/icons/InstagramLogo.svg" alt="">
+                    <p>Instagram</p>
+                    <img src="assets/icons/ArrowUpRight.svg" alt="">
+
+                </div>
+
+                <div class="link">
+                    <img src="assets/icons/GithubLogo.svg" alt="">
+                    <p>GitHub</p>
+                    <img src="assets/icons/ArrowUpRight.svg" alt="">
+
+                </div>
+
+                <div class="link">
+                    <img src="assets/icons/Vector.svg" alt="">
+                    <p>E-mail</p>
+                    <img src="assets/icons/ArrowUpRight.svg" alt="">
+
+                </div>
+            </section>
+        </footer>
     </div>
 
 </body>
